add execute main from plugin class directly